k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spaced-repetition
  labels:
    name: spaced-repetition
    app: spaced-repetition-capstone
